--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
     "antd": "^4.6.6",
     "axios": "^0.20.0",
     "craco-less": "^1.17.0",
+    "immer": "^7.0.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.0",
     "styled-components-modifiers": "^1.2.5",
     "typescript": "~3.7.2"
@@ -41,6 +47,8 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "5.12.0",
