--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "antd": "^4.6.6",
     "axios": "^0.20.0",
     "craco-less": "^1.17.0",
+    "formik": "^2.2.0",
     "immer": "^7.0.9",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -23,9 +25,11 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "styled-components-modifiers": "^1.2.5",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +51,7 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@types/lodash": "^4.14.162",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
