--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "2.1.8",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
